manifests/monitoring/alertmanager/base/deployment.yaml
# Copyright (C) 2016, 2019 Nicolas Lamirault <nicolas.lamirault@gmail.com>

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alertmanager
  labels:
    k8s-app: alertmanager
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: alertmanager
  template:
    metadata:
      labels:
        k8s-app: alertmanager
    spec:
      serviceAccountName: alertmanager
      containers:
      - name: alertmanager
        image: prom/alertmanager:latest
        args:
          - --config.file=/etc/alertmanager/alertmanager.yml
          - --storage.path=/data
          - --web.listen-address=:9093
          - --web.route-prefix=/
          # - --cluster.listen-address=$(POD_IP):6783
          # - --cluster.peer=$APP_INSTANCE_NAME-alertmanager-0.$APP_INSTANCE_NAME-alertmanager-operated.$NAMESPACE.svc:6783
          # - --cluster.peer=$APP_INSTANCE_NAME-alertmanager-1.$APP_INSTANCE_NAME-alertmanager-operated.$NAMESPACE.svc:6783
          - --log.level=debug
        ports:
        - name: http
          containerPort: 9093
        volumeMounts:
          - name: alertmanager-config
            mountPath: /etc/alertmanager/
          - name: alertmanager-data
            mountPath: /data
        livenessProbe:
          httpGet:
            path: /#/status
            port: http
            scheme: HTTP
          initialDelaySeconds: 60
        readinessProbe:
          httpGet:
            path: /#/status
            port: http
            scheme: HTTP
          initialDelaySeconds: 10
          timeoutSeconds: 3
        resources:
          requests:
            memory: "50Mi"
            cpu: "10m"
          limits:
            memory: "80Mi"
            cpu: "20m"
      volumes:
        - name: alertmanager-data
          persistentVolumeClaim:
            claimName: alertmanager-data
        - name: alertmanager-config
          configMap:
            name: alertmanager
            items:
              - key: alertmanager.yml
                path: alertmanager.yml
